# randomrad

./: .gitignore  .gitmodules  README.md  nicetoknow.txt  pyproject.toml
ESP32/: main.py
badprng/: __init__.py  randu.py
docs/randomness_tests/: README.md  randu_1000000.json  randu_8192.json  report_1000000.md  report_8192.md  rr_1000000.json  rr_8192.json
randomrad/: __init__.py  api.py  entropy.py  exceptions.py
randomrad/_vendor/randomness_testsuite/: __init__.py
randomrad/backends/: __init__.py  file_backend.py  hw_backend.py
scripts/: benchmark_troughput.py  dump_bitstream.py  hist_unbiased.py  histogram_100k.py  make_report.py  run_randomness_testsuite.py
tests/: conftest.py  my_test.py  test_file_backend_loop.py  test_hw_short_read.py
tests/hardware/: test_hw_smoke.py
tests/unit/: test_api_contract.py  test_entropy_behavior.py
